fonts and links added

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,8 +5,8 @@
 			</div>
 			<div id="buttons-list">
 				<ul class="list-inline buttons">
-					<li>ABOUT</li>
-					<li>SIGN UP</li>
+					<li><a href="#">ABOUT</a></li>
+					<li><a href="#">SIGN UP</a></li>
 				</ul>
 				
 			</div>
@@ -28,7 +28,7 @@
 				</div>
 
 				<div class="sign-up">
-					<img src="/images/signup.png"/>
+					<a href="#"><img src="/images/signup.png"/></a>
 				</div>
 				
 				<div class="block-image">
@@ -38,7 +38,7 @@
 
 			<div class="footer">
 				<div id="facebook">
-					<img src="/images/facebook.png"/>
+					<a href="#"><img src="/images/facebook.png"/></a>
 				</div>
 			</div>
 		</div>
