--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -44,9 +44,17 @@ body {
 	color: grey;
 	font-size: 12px;
 	padding-right: 20px;
+	font-family: 'Open Sans', sans-serif;
 }
 
+a {
+	color: grey;
+}
 
+a:hover {
+	color:white;
+	text-decoration: none;
+}
 
 #body {
 	
@@ -93,16 +101,22 @@ body {
 	float: right;
 }
 
+@font-face {
+  font-family: 'Sackers';
+  src: font-url("/assets/fonts/sackers.otf") format("truetype");
+}
+
 .paragraph-header {
 	width: 500px;
 	position: absolute;
 	top: 25px;
 	left: 40px;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 30px;
+	font-size: 35px;
 	color: grey;
 	float: left;
 	text-height: 400px;
+	font-family: 'Open Sans', sans-serif;
 }
 
 .sign-up {
@@ -113,10 +127,11 @@ body {
 
 .paragraph {
 	position:absolute;
-	top: 80px;
+	top: 90px;
 	left:43px;
 	width:700px;
 	color: grey;
+	font-family: 'Open Sans', sans-serif;
 }
 
 p.big {
@@ -139,3 +154,4 @@ p.big {
 	top:15px;
 	left:900px;
 }
+
