--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -155,3 +155,64 @@ p.big {
 	left:900px;
 }
 
+.signup-form {
+	position: absolute;
+	width: 390px;
+	height: 350px;
+	top: 95px;
+	left: 40px;
+	background: #151515;
+	border-width: 1px;
+	border-radius: 5px;
+	border-color: grey;
+	border-style: solid;
+	padding-left: 15px;
+	padding-top: 50px;
+}
+
+.new-user {
+	height: 600px;
+	position:relative;
+	margin:0 auto;
+	background: url(../images/background1.jpg);
+}
+
+.form-field {
+	width: 350px;
+	background-color: black;
+	transition: box-shadow 0.3s;
+	text-decoration: none;
+	height: 32px;
+	border-width: 1px;
+	border-color: grey; 
+	margin-bottom: 12px;
+}
+
+.form-field:focus {
+	text-decoration: none;
+}
+
+.form-sub-header {
+	font-family: 'Open Sans', sans-serif;
+	position: absolute;
+	padding-bottom:20px;
+	margin-bottom: 12px;
+	top: 7px;
+	color: #8CA29D;
+	font-size: 23px;
+}
+
+.field {
+	color: grey;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 10px;
+}
+
+.form-header {
+	top: 15px;
+	left: 40px;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 35px;
+	color: grey;
+	position: absolute;
+}
