--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,44 +1,18 @@
-<div id="page" class="center">
-		<div id="header" class="center">
-			<div id="logo">
-				<img src="/images/logo.png" alt="rss feed" />
-			</div>
-			<div id="buttons-list">
-				<ul class="list-inline buttons">
-					<li> <a href="#">ABOUT</a> </li>
-					<li> <a href="#">SIGN UP</a> </li>
-				</ul>
+<div class="info">
 				
-			</div>
-		</div>
-		<div id="body">
-			<div id="image-carousel">
-				<img class="active" src="/images/banner1.jpg" alt="My image"/>
-				<img src="/images/banner2.jpg" alt="My image"/>
-			</div>
-			
-			<div class="info">
-				
-				<div class="paragraph-header">
-					<p>CREATE AMAZING GAMES</p>
-				</div>
-				
-				<div class="paragraph">
-					<p class="big">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi malesuada neque eu dolor gravida ornare. Pellentesque in ligula turpis. Cras blandit, dolor vel cursus convallis, ante metus dictum enim, eget eleifend massa metus venenatis diam. Maecenas at posuere libero, sit amet molestie nisi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam id pellentesque arcu, vel fringilla enim. Nullam a mi at lacus sollicitudin convallis. Etiam tempus laoreet ipsum, at laoreet tellus porta ac. Nunc sit amet congue risus.</p>
-				</div>
-
-				<div class="sign-up">
-					<a href="#"> <img src="/images/signup.png"/> </a>
-				</div>
-				
-				<div class="block-image">
-					<img src="/images/3dblockimage.png"/>
-				</div>
-			</div>
-		</div>
-		<div class="footer">
-				<div id="facebook">
-					<a href="#"> <img src="/images/facebook.png"/> </a>
-				</div>
-			</div>
+	<div class="paragraph-header">
+		<p>CREATE AMAZING GAMES</p>
 	</div>
+	
+	<div class="paragraph">
+		<p class="big">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi malesuada neque eu dolor gravida ornare. Pellentesque in ligula turpis. Cras blandit, dolor vel cursus convallis, ante metus dictum enim, eget eleifend massa metus venenatis diam. Maecenas at posuere libero, sit amet molestie nisi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam id pellentesque arcu, vel fringilla enim. Nullam a mi at lacus sollicitudin convallis. Etiam tempus laoreet ipsum, at laoreet tellus porta ac. Nunc sit amet congue risus.</p>
+	</div>
+
+	<div class="sign-up">
+		<%= link_to image_tag('/images/signup.png'), new_user_registration_path %>
+	</div>
+	
+	<div class="block-image">
+		<img src="/images/3dblockimage.png"/>
+	</div>
+</div>
