--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,29 @@
 			<div id="logo">
 				<img src="/images/logo.png" alt="rss feed" />
 			</div>
+			
 			<div id="buttons-list">
 				<ul class="list-inline buttons">
 					<li><%= link_to "ABOUT", root_path %></li>
-					<li><%= link_to "SIGN UP", signup_path %></li>
+					<% if user_signed_in? %>
+					<li><%= link_to "LOGOUT", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
+					<% else %>
+					<li><%= link_to "SIGN UP", new_user_registration_path %></li>
+					<li><%= link_to "LOGIN", new_user_session_path, :class => 'navbar-link'  %></li>
+					<% end %>
 				</ul>
 				
+			</div>
+			<div class="alert-div">
+					<ul class="notice">
+						<% if notice %>
+						  <li class="alert"><%= notice %></li>
+						<% end %>
+			
+						<% if alert %>
+						  <li class="alert"><%= alert %></li>
+						<% end %>
+					</ul>
 			</div>
 		</div>
 		<div id="body">
@@ -27,24 +44,17 @@
 				<img src="/images/banner2.jpg" alt="My image"/>
 			</div>
 			
-			<% if notice %>
-			  <p class="alert alert-success"><%= notice %></p>
-			<% end %>
-			
-			<% if alert %>
-			  <p class="alert alert-danger"><%= alert %></p>
-			<% end %>
-			
 
 			<%= yield %>
 
 
 		</div>
+		
 		<div class="footer">
-				<div id="facebook">
-					<a href="#"> <img src="/images/facebook.png"/> </a>
-				</div>
+			<div id="facebook">
+				<a href="#"> <img src="/images/facebook.png"/> </a>
 			</div>
+		</div>
 	</div>
 
 
