--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,10 @@
 <div class="new-user">
+
   <div class="form-header"><p>BUY FULL SITE ACCESS NOW</p></div>
   <div class="signup-form">
     <div class="form-sub-header"><p>Start your account</p></div>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= devise_error_messages! %>
+      
 
       <div class="field">
         <%= f.label :email, 'EMAIL ADDRESS' %><br />
@@ -12,9 +13,6 @@
 
       <div class="field">
         <%= f.label :password, 'PASSWORD' %>
-        <% if @validatable %>
-        
-        <% end %><br />
         <%= f.password_field :password, autocomplete: "off", class: "form-field" %>
       </div>
 
@@ -23,10 +21,20 @@
         <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-field" %>
       </div>
 
-      <div class="actions">
-        <%= f.submit "Sign up" %>
+      <div class="field">
+        <%= f.label :first_name, 'FIRST NAME' %><br />
+        <%= f.text_field :first_name, autocomplete: "off", class: "form-field" %>
+      </div>
+
+      <div class="field">
+        <%= f.label :last_name, 'LAST NAME' %><br />
+        <%= f.text_field :last_name, autocomplete: "off", class: "form-field" %>
+      </div>
+
+      <div class="actions sub">
+        <%= f.submit "", class: "submit"%>
       </div>
     <% end %>
   </div>
-    <%= render "devise/shared/links" %>
+    
 </div>
