--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -36,5 +36,22 @@
       </div>
     <% end %>
   </div>
-    
+
+  <div class="price">
+    <p>$99</p>
+  </div>
+
+  <div class="script">
+    <p class="big-script">START LEARNING NOW!</p>
+  </div>
+  
+  <div class="lil-script">
+    <p>1 full year of training and support</p>
+  </div>
+</div>
+  
+  
+
+<div class="tree-image">
+    <img src="/images/purchase-page-img.png"/>
 </div>
