--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
 </head>
 <body>
 	<div id="page" class="center">
+		<div class="current-user">
+			<% if user_signed_in? %>
+			<p>Welcome, <%= current_user.first_name %> !</p>
+			<% end %>
+		</div>
 		<div id="header" class="center">
 			<div id="logo">
 				<img src="/images/logo.png" alt="rss feed" />
@@ -18,6 +23,7 @@
 				<ul class="list-inline buttons">
 					<li><%= link_to "ABOUT", root_path %></li>
 					<% if user_signed_in? %>
+					<li><%= link_to "TRAINING", training_path %></li>
 					<li><%= link_to "LOGOUT", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
 					<% else %>
 					<li><%= link_to "SIGN UP", new_user_registration_path %></li>
